# kan_trials

./: .gitignore  KAN_tuning.py  clearML_data.py  pyproject.toml  requirements.txt  task_kan-ds.py  task_kan.py  task_optimize.py
MLP_optuna/: mlp_data.py  mlp_final_train.py  mlp_main.py  mlp_optuna.py  mlp_plot.py
clearML_optuna/: clearML_data.py  clearML_main.py  clearML_plot.py  clearml_optuna.py  scaler.pkl  y_test.npy  y_train.npy
